Fix modal selector overflow issues (#1461)
* Fix modal selector overflow issues

* Fix overflow when image is not present

* Fix/modal selector (#1465)

* chore(RadioButton): do not render children node when no children exist

* chore(Checkbox): do not render children node when no children exist

* chore(Selector): refactor html & css

for easier ellipsis handling

* test(Selector): change test to use predefined teskit methods

also remove `imageStyle` as it's now redundant

--- a/src/Selector/Selector.scss
+++ b/src/Selector/Selector.scss
@@ -1,11 +1,11 @@
 @import '../common.scss';
 
-.selector {
-  align-items: center;
-  cursor: pointer;
+.root {
   display: flex;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
   padding: 12px 30px;
+  cursor: pointer;
 
   &:hover {
     background-color: $B50;
@@ -14,22 +14,18 @@
       background-color: $B30;
     }
   }
+}
 
-  .main {
-    align-items: center;
-    display: flex;
-    flex: 1;
-  }
-
-  .extra {
-    max-width: 180px;
-  }
+.titles {
+  flex: 1 1 auto;
+  overflow: hidden;
+  margin-left: 12px;
 }
 
 .image {
   overflow: hidden;
-  margin-left: 8px;
-  margin-right: 20px;
+  margin: 0 8px 0 20px;
+  flex: 0 0 auto;
 
   &.tiny {
     width: 24px;
@@ -69,4 +65,11 @@
   &.circle {
     border-radius: 50%;
   }
+}
+
+.extra {
+  flex: 0 0 auto;
+  max-width: 180px;
+  margin-left: 18px;
+  overflow: hidden;
 }
